[tool.poetry]
name = "tap-sensedata"
version = "0.0.1"
description = "`tap-sensedata` is a Singer tap for sensedata, built with the Meltano SDK for Singer Taps."
authors = ["amanda machado"]
keywords = [
    "ELT",
    "sensedata",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.5.0"
requests-oauthlib = "^1.3.1"
attrs = "^21.4.0"
atomicwrites = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^23.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sensedata"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sensedata = 'tap_sensedata.tap:Tapsensedata.cli'
